--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^8.0.1
+  flutter_animate: ^4.5.2
+  animated_text_kit: ^4.3.0
+  flutter_tts: ^4.2.5
 
 dev_dependencies:
   flutter_test:
