--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   http: ^1.6.0
   google_generative_ai: ^0.4.7
   flutter_dotenv: ^6.0.0
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
